accounts/kubernetes/3_configserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver-deployment
  labels:
    app: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
      - name: configserver
        image: ruldarm00/configserver:latest
        ports:
        - containerPort: 8071
        env:
        - name: SPRING_ZIPKIN_BASEURL
          valueFrom: 
            configMapKeyRef:
              name: ruldarm00-configmap
              key: SPRING_ZIPKIN_BASEURL
        - name: SPRING_PROFILES_ACTIVE
          valueFrom: 
            configMapKeyRef:
              name: ruldarm00-configmap
              key: SPRING_PROFILES_ACTIVE
---
apiVersion: v1
kind: Service
metadata:
  name: configserver-service
spec:
  selector:
    app: configserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
