accounts/kubernetes/7_cards.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards-deployment
  labels:
    app: cards
spec:
  replicas: 1
  template:
    metadata:
      name: cards
      labels:
        app: cards
    spec:
      containers:
        - name: cards
          image: ruldarm00/cards
          ports:
            - containerPort: 9000
          env:
            - name: SPRING_PROFILES_ACTIVE
              valueFrom:
                configMapKeyRef:
                  name: ruldarm00-configmap
                  key: SPRING_PROFILES_ACTIVE
            - name: SPRING_ZIPKIN_BASEURL
              valueFrom:
                configMapKeyRef:
                  name: ruldarm00-configmap
                  key: SPRING_ZIPKIN_BASEURL
            - name: SPRING_CONFIG_IMPORT
              valueFrom:
                configMapKeyRef:
                  name: ruldarm00-configmap
                  key: SPRING_CONFIG_IMPORT
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              valueFrom:
                configMapKeyRef:
                  name: ruldarm00-configmap
                  key: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
  selector:
    matchLabels:
      app: cards

---
apiVersion: v1
kind: Service
metadata:
  name: cards-service
spec:
  selector:
    app: cards
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
